Update to SpringBoot 3.2 and JDK17